@@ -2,7 +2,6 @@ package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.ClientAuthenticationType;
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.builder.api.OAuth2SignatureType;
 
 public class PinterestApi extends DefaultApi20 {
 
@@ -25,11 +24,6 @@ public class PinterestApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://api.pinterest.com/oauth";
-    }
-
-    @Override
-    public OAuth2SignatureType getSignatureType() {
-        return OAuth2SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 
     @Override
